src/y.output
Terminals unused in grammar

   KEYWORD
   NEGATIVE_DIGIT
   DATE


Grammar

    0 $accept: start $end

    1 start: query ';'

    2 query: UPDATE table_name SET assignment_list
    3      | UPDATE table_name SET assignment_list option_list

    4 assignment_list: assignment_list ',' assignment_list
    5                | '(' assignment ')'
    6                | assignment

    7 assignment: col_name '=' value

    8 table_name: IDENTIFIER

    9 col_name: IDENTIFIER

   10 value: expr
   11      | DEFAULT

   12 expr: expr '+' expr
   13     | expr '-' expr
   14     | expr '*' expr
   15     | expr '/' expr
   16     | real_number
   17     | identifiers_strings

   18 option_list: WHERE condition_list
   19            | ORDER BY order_by_list
   20            | LIMIT POSITIVE_DIGIT
   21            | WHERE condition_list ORDER BY order_by_list
   22            | WHERE condition_list LIMIT POSITIVE_DIGIT
   23            | ORDER BY order_by_list LIMIT POSITIVE_DIGIT
   24            | WHERE condition_list ORDER BY order_by_list LIMIT POSITIVE_DIGIT

   25 condition_list: condition_list OR condition_list
   26               | condition_list AND condition_list
   27               | '(' condition ')'
   28               | condition

   29 condition: assignment
   30          | col_name COMPARISION_OPERATOR real_number
   31          | col_name BETWEEN real_number AND real_number

   32 identifiers_strings: IDENTIFIER
   33                    | STRING_LITERAL

   34 real_number: POSITIVE_DIGIT
   35            | '-' real_number
   36            | FLOAT

   37 order_by_list: order_by_list ',' order_by_list
   38              | col_name
   39              | col_name ASC
   40              | col_name DESC


Terminals, with rules where they appear

$end (0) 0
'(' (40) 5 27
')' (41) 5 27
'*' (42) 14
'+' (43) 12
',' (44) 4 37
'-' (45) 13 35
'/' (47) 15
';' (59) 1
'=' (61) 7
error (256)
UPDATE (258) 2 3
SET (259) 2 3
WHERE (260) 18 21 22 24
ORDER (261) 19 21 23 24
BY (262) 19 21 23 24
ASC (263) 39
DESC (264) 40
LIMIT (265) 20 22 23 24
AND (266) 26 31
OR (267) 25
DEFAULT (268) 11
BETWEEN (269) 31
KEYWORD (270)
IDENTIFIER (271) 8 9 32
STRING_LITERAL (272) 33
NEGATIVE_DIGIT (273)
POSITIVE_DIGIT (274) 20 22 23 24 34
FLOAT (275) 36
DATE (276)
COMPARISION_OPERATOR (277) 30
UMINUS (278)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
start (34)
    on left: 1, on right: 0
query (35)
    on left: 2 3, on right: 1
assignment_list (36)
    on left: 4 5 6, on right: 2 3 4
assignment (37)
    on left: 7, on right: 5 6 29
table_name (38)
    on left: 8, on right: 2 3
col_name (39)
    on left: 9, on right: 7 30 31 38 39 40
value (40)
    on left: 10 11, on right: 7
expr (41)
    on left: 12 13 14 15 16 17, on right: 10 12 13 14 15
option_list (42)
    on left: 18 19 20 21 22 23 24, on right: 3
condition_list (43)
    on left: 25 26 27 28, on right: 18 21 22 24 25 26
condition (44)
    on left: 29 30 31, on right: 27 28
identifiers_strings (45)
    on left: 32 33, on right: 17
real_number (46)
    on left: 34 35 36, on right: 16 30 31 35
order_by_list (47)
    on left: 37 38 39 40, on right: 19 21 23 24 37


state 0

    0 $accept: . start $end

    UPDATE  shift, and go to state 1

    start  go to state 2
    query  go to state 3


state 1

    2 query: UPDATE . table_name SET assignment_list
    3      | UPDATE . table_name SET assignment_list option_list

    IDENTIFIER  shift, and go to state 4

    table_name  go to state 5


state 2

    0 $accept: start . $end

    $end  shift, and go to state 6


state 3

    1 start: query . ';'

    ';'  shift, and go to state 7


state 4

    8 table_name: IDENTIFIER .

    $default  reduce using rule 8 (table_name)


state 5

    2 query: UPDATE table_name . SET assignment_list
    3      | UPDATE table_name . SET assignment_list option_list

    SET  shift, and go to state 8


state 6

    0 $accept: start $end .

    $default  accept


state 7

    1 start: query ';' .

    $default  reduce using rule 1 (start)


state 8

    2 query: UPDATE table_name SET . assignment_list
    3      | UPDATE table_name SET . assignment_list option_list

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 10

    assignment_list  go to state 11
    assignment       go to state 12
    col_name         go to state 13


state 9

    9 col_name: IDENTIFIER .

    $default  reduce using rule 9 (col_name)


state 10

    5 assignment_list: '(' . assignment ')'

    IDENTIFIER  shift, and go to state 9

    assignment  go to state 14
    col_name    go to state 13


state 11

    2 query: UPDATE table_name SET assignment_list .
    3      | UPDATE table_name SET assignment_list . option_list
    4 assignment_list: assignment_list . ',' assignment_list

    WHERE  shift, and go to state 15
    ORDER  shift, and go to state 16
    LIMIT  shift, and go to state 17
    ','    shift, and go to state 18

    $default  reduce using rule 2 (query)

    option_list  go to state 19


state 12

    6 assignment_list: assignment .

    $default  reduce using rule 6 (assignment_list)


state 13

    7 assignment: col_name . '=' value

    '='  shift, and go to state 20


state 14

    5 assignment_list: '(' assignment . ')'

    ')'  shift, and go to state 21


state 15

   18 option_list: WHERE . condition_list
   21            | WHERE . condition_list ORDER BY order_by_list
   22            | WHERE . condition_list LIMIT POSITIVE_DIGIT
   24            | WHERE . condition_list ORDER BY order_by_list LIMIT POSITIVE_DIGIT

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 22

    assignment      go to state 23
    col_name        go to state 24
    condition_list  go to state 25
    condition       go to state 26


state 16

   19 option_list: ORDER . BY order_by_list
   23            | ORDER . BY order_by_list LIMIT POSITIVE_DIGIT

    BY  shift, and go to state 27


state 17

   20 option_list: LIMIT . POSITIVE_DIGIT

    POSITIVE_DIGIT  shift, and go to state 28


state 18

    4 assignment_list: assignment_list ',' . assignment_list

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 10

    assignment_list  go to state 29
    assignment       go to state 12
    col_name         go to state 13


state 19

    3 query: UPDATE table_name SET assignment_list option_list .

    $default  reduce using rule 3 (query)


state 20

    7 assignment: col_name '=' . value

    DEFAULT         shift, and go to state 30
    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    value                go to state 36
    expr                 go to state 37
    identifiers_strings  go to state 38
    real_number          go to state 39


state 21

    5 assignment_list: '(' assignment ')' .

    $default  reduce using rule 5 (assignment_list)


state 22

   27 condition_list: '(' . condition ')'

    IDENTIFIER  shift, and go to state 9

    assignment  go to state 23
    col_name    go to state 24
    condition   go to state 40


state 23

   29 condition: assignment .

    $default  reduce using rule 29 (condition)


state 24

    7 assignment: col_name . '=' value
   30 condition: col_name . COMPARISION_OPERATOR real_number
   31          | col_name . BETWEEN real_number AND real_number

    BETWEEN               shift, and go to state 41
    COMPARISION_OPERATOR  shift, and go to state 42
    '='                   shift, and go to state 20


state 25

   18 option_list: WHERE condition_list .
   21            | WHERE condition_list . ORDER BY order_by_list
   22            | WHERE condition_list . LIMIT POSITIVE_DIGIT
   24            | WHERE condition_list . ORDER BY order_by_list LIMIT POSITIVE_DIGIT
   25 condition_list: condition_list . OR condition_list
   26               | condition_list . AND condition_list

    ORDER  shift, and go to state 43
    LIMIT  shift, and go to state 44
    AND    shift, and go to state 45
    OR     shift, and go to state 46

    $default  reduce using rule 18 (option_list)


state 26

   28 condition_list: condition .

    $default  reduce using rule 28 (condition_list)


state 27

   19 option_list: ORDER BY . order_by_list
   23            | ORDER BY . order_by_list LIMIT POSITIVE_DIGIT

    IDENTIFIER  shift, and go to state 9

    col_name       go to state 47
    order_by_list  go to state 48


state 28

   20 option_list: LIMIT POSITIVE_DIGIT .

    $default  reduce using rule 20 (option_list)


state 29

    4 assignment_list: assignment_list . ',' assignment_list
    4                | assignment_list ',' assignment_list .

    $default  reduce using rule 4 (assignment_list)


state 30

   11 value: DEFAULT .

    $default  reduce using rule 11 (value)


state 31

   32 identifiers_strings: IDENTIFIER .

    $default  reduce using rule 32 (identifiers_strings)


state 32

   33 identifiers_strings: STRING_LITERAL .

    $default  reduce using rule 33 (identifiers_strings)


state 33

   34 real_number: POSITIVE_DIGIT .

    $default  reduce using rule 34 (real_number)


state 34

   36 real_number: FLOAT .

    $default  reduce using rule 36 (real_number)


state 35

   35 real_number: '-' . real_number

    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    real_number  go to state 49


state 36

    7 assignment: col_name '=' value .

    $default  reduce using rule 7 (assignment)


state 37

   10 value: expr .
   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr

    '+'  shift, and go to state 50
    '-'  shift, and go to state 51
    '*'  shift, and go to state 52
    '/'  shift, and go to state 53

    $default  reduce using rule 10 (value)


state 38

   17 expr: identifiers_strings .

    $default  reduce using rule 17 (expr)


state 39

   16 expr: real_number .

    $default  reduce using rule 16 (expr)


state 40

   27 condition_list: '(' condition . ')'

    ')'  shift, and go to state 54


state 41

   31 condition: col_name BETWEEN . real_number AND real_number

    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    real_number  go to state 55


state 42

   30 condition: col_name COMPARISION_OPERATOR . real_number

    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    real_number  go to state 56


state 43

   21 option_list: WHERE condition_list ORDER . BY order_by_list
   24            | WHERE condition_list ORDER . BY order_by_list LIMIT POSITIVE_DIGIT

    BY  shift, and go to state 57


state 44

   22 option_list: WHERE condition_list LIMIT . POSITIVE_DIGIT

    POSITIVE_DIGIT  shift, and go to state 58


state 45

   26 condition_list: condition_list AND . condition_list

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 22

    assignment      go to state 23
    col_name        go to state 24
    condition_list  go to state 59
    condition       go to state 26


state 46

   25 condition_list: condition_list OR . condition_list

    IDENTIFIER  shift, and go to state 9
    '('         shift, and go to state 22

    assignment      go to state 23
    col_name        go to state 24
    condition_list  go to state 60
    condition       go to state 26


state 47

   38 order_by_list: col_name .
   39              | col_name . ASC
   40              | col_name . DESC

    ASC   shift, and go to state 61
    DESC  shift, and go to state 62

    $default  reduce using rule 38 (order_by_list)


state 48

   19 option_list: ORDER BY order_by_list .
   23            | ORDER BY order_by_list . LIMIT POSITIVE_DIGIT
   37 order_by_list: order_by_list . ',' order_by_list

    LIMIT  shift, and go to state 63
    ','    shift, and go to state 64

    $default  reduce using rule 19 (option_list)


state 49

   35 real_number: '-' real_number .

    $default  reduce using rule 35 (real_number)


state 50

   12 expr: expr '+' . expr

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    expr                 go to state 65
    identifiers_strings  go to state 38
    real_number          go to state 39


state 51

   13 expr: expr '-' . expr

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    expr                 go to state 66
    identifiers_strings  go to state 38
    real_number          go to state 39


state 52

   14 expr: expr '*' . expr

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    expr                 go to state 67
    identifiers_strings  go to state 38
    real_number          go to state 39


state 53

   15 expr: expr '/' . expr

    IDENTIFIER      shift, and go to state 31
    STRING_LITERAL  shift, and go to state 32
    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    expr                 go to state 68
    identifiers_strings  go to state 38
    real_number          go to state 39


state 54

   27 condition_list: '(' condition ')' .

    $default  reduce using rule 27 (condition_list)


state 55

   31 condition: col_name BETWEEN real_number . AND real_number

    AND  shift, and go to state 69


state 56

   30 condition: col_name COMPARISION_OPERATOR real_number .

    $default  reduce using rule 30 (condition)


state 57

   21 option_list: WHERE condition_list ORDER BY . order_by_list
   24            | WHERE condition_list ORDER BY . order_by_list LIMIT POSITIVE_DIGIT

    IDENTIFIER  shift, and go to state 9

    col_name       go to state 47
    order_by_list  go to state 70


state 58

   22 option_list: WHERE condition_list LIMIT POSITIVE_DIGIT .

    $default  reduce using rule 22 (option_list)


state 59

   25 condition_list: condition_list . OR condition_list
   26               | condition_list . AND condition_list
   26               | condition_list AND condition_list .

    $default  reduce using rule 26 (condition_list)


state 60

   25 condition_list: condition_list . OR condition_list
   25               | condition_list OR condition_list .
   26               | condition_list . AND condition_list

    AND  shift, and go to state 45

    $default  reduce using rule 25 (condition_list)


state 61

   39 order_by_list: col_name ASC .

    $default  reduce using rule 39 (order_by_list)


state 62

   40 order_by_list: col_name DESC .

    $default  reduce using rule 40 (order_by_list)


state 63

   23 option_list: ORDER BY order_by_list LIMIT . POSITIVE_DIGIT

    POSITIVE_DIGIT  shift, and go to state 71


state 64

   37 order_by_list: order_by_list ',' . order_by_list

    IDENTIFIER  shift, and go to state 9

    col_name       go to state 47
    order_by_list  go to state 72


state 65

   12 expr: expr . '+' expr
   12     | expr '+' expr .
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr

    '*'  shift, and go to state 52
    '/'  shift, and go to state 53

    $default  reduce using rule 12 (expr)


state 66

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   13     | expr '-' expr .
   14     | expr . '*' expr
   15     | expr . '/' expr

    '*'  shift, and go to state 52
    '/'  shift, and go to state 53

    $default  reduce using rule 13 (expr)


state 67

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   14     | expr '*' expr .
   15     | expr . '/' expr

    $default  reduce using rule 14 (expr)


state 68

   12 expr: expr . '+' expr
   13     | expr . '-' expr
   14     | expr . '*' expr
   15     | expr . '/' expr
   15     | expr '/' expr .

    $default  reduce using rule 15 (expr)


state 69

   31 condition: col_name BETWEEN real_number AND . real_number

    POSITIVE_DIGIT  shift, and go to state 33
    FLOAT           shift, and go to state 34
    '-'             shift, and go to state 35

    real_number  go to state 73


state 70

   21 option_list: WHERE condition_list ORDER BY order_by_list .
   24            | WHERE condition_list ORDER BY order_by_list . LIMIT POSITIVE_DIGIT
   37 order_by_list: order_by_list . ',' order_by_list

    LIMIT  shift, and go to state 74
    ','    shift, and go to state 64

    $default  reduce using rule 21 (option_list)


state 71

   23 option_list: ORDER BY order_by_list LIMIT POSITIVE_DIGIT .

    $default  reduce using rule 23 (option_list)


state 72

   37 order_by_list: order_by_list . ',' order_by_list
   37              | order_by_list ',' order_by_list .

    $default  reduce using rule 37 (order_by_list)


state 73

   31 condition: col_name BETWEEN real_number AND real_number .

    $default  reduce using rule 31 (condition)


state 74

   24 option_list: WHERE condition_list ORDER BY order_by_list LIMIT . POSITIVE_DIGIT

    POSITIVE_DIGIT  shift, and go to state 75


state 75

   24 option_list: WHERE condition_list ORDER BY order_by_list LIMIT POSITIVE_DIGIT .

    $default  reduce using rule 24 (option_list)
